--- a/docs/indice.Rmd
+++ b/docs/indice.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Proyecto Applicación Esqueleto"
+title: "Proyecto Aplicación Esqueleto"
 output:
   html_document:
     css: "skeleton.css"
@@ -13,4 +13,6 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <p>Esta aplicación, interactiva y en línea, permite crear, editar, cargar y descargar ficheros csv de datos. Ha sido desarrollada para servir como punto de partida para el desarrollo de otras aplicaciones.</p>
 
-<p>Desarrollada usando shiny by <a href="mailto:manuel.munoz@uca.es">M. Muñoz-Márquez</a> bajo licencia GNU-GPL como parte del <a href="http://knuth.uca.es/R">Proyecto R-UCA</a>.</p>
+<p>Desarrollada usando shiny por <a href="mailto:manuel.munoz(at)uca.es">M. Muñoz-Márquez</a> bajo licencia GNU-GPL como parte del <a href="http://knuth.uca.es/R/">Proyecto R-UCA</a>.</p>
+
+Fuentes disponibles en <a href="https://github.com/MMunozMarquez/skeleton/">GitHub</a>.
